createUser + json serve

--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -1,1 +1,20 @@
-<p>singup works!</p>
+<div class="p-3 border bg-light text-center">
+    <form class="form-signup" [formGroup]="authForm" (ngSubmit)="onSubmitForm()">
+        <img class="mb-4" src="../favicon.ico" alt="" width="72" height="72">
+        <br>
+        <h1 class="h3 mb-3 font-weight-normal">Please Sign Up</h1>
+        <br>
+        <div class="form-group">
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" formControlName="mail">
+            <br>
+        </div>
+            <div class="form-group">
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" formControlName="password">
+            <br>
+            </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="authForm.invalid"> Sign In </button>
+        </form>
+        <p class="text-danger">{{ errorMessage }}</p>
+</div>
