--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,30 +5,30 @@
     </a>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto" *ngIf="isAuth">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown" routerLinkActive="active">
+          <a class="nav-link dropdown-toggle" routerLink="/home" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Uttilisateur
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Informarion</a>
-            <a class="dropdown-item" href="#">Publication</a>
+            <a class="dropdown-item" routerLink="/info">Informarion</a>
+            <a class="dropdown-item" routerLink="/publi">Publication</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Statistique</a>
+            <a class="dropdown-item" routerLink="/stat">Statistique</a>
           </div>
         </li>
         <li class="nav-item active" routerLinkActive="active">
           <a class="nav-link" routerLink="/home">Acceuil <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Recherche</a>
+          <a class="nav-link" routerLink="/research">Recherche</a>
         </li>
       </ul>
-      <ul class="navbar-nav " *ngIf="isAuth">
-        <li>
+      <ul class="navbar-nav ">
+        <li routerLinkActive="active">
           <a (click)="onSignOut()"
           style="cursor:pointer"
-          *ngIf="isAuth">Déconnexion</a>
+          >Déconnexion</a>
       </li>
       </ul>
     </div>
