--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -6,15 +6,29 @@
         <br>
         <div class="form-group">
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" formControlName="mail">
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address *" formControlName="mail">
             <br>
         </div>
-            <div class="form-group">
+        <div class="form-group">
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" formControlName="password">
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password *" formControlName="password">
             <br>
-            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPhone" class="sr-only">Phone</label>
+            <input type="text" id="inputPhone" class="form-control" placeholder="Phone Number" formControlName="phone">
+            <br>
+        </div>
+        <div class="form-group">
+            <label for="inputAdd" class="sr-only">Address</label>
+            <input type="text1" id="inputAddress" class="form-control" placeholder="Address" formControlName="address">
+            <br>
+        </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="authForm.invalid"> Sign In </button>
         </form>
+        <br>
         <p class="text-danger">{{ errorMessage }}</p>
+        <div class="alert alert-success" role="alert" *ngIf='newUser'>
+            {{ message }}
+        </div>
 </div>
