--- a/src/app/user/infos/infos.component.html
+++ b/src/app/user/infos/infos.component.html
@@ -1,1 +1,36 @@
-<p>infos works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+<body>
+
+<div ng-app="myApp" ng-controller="formCtrl">
+  <form>
+    Prenom: <input type="text" ng-model="firstname">
+    <br>
+    Nom: <input type="text" ng-model="name">
+    <br>
+    Pseudonime: <input type="text" ng-model="pseudo">
+    <br>
+    Email: <input type="text" ng-model="email">
+    <br>
+    Mot de passe: <input type="password" ng-model="pwd">
+    <br>
+    Confirmer mot de passe: <input type="password" ng-model="pwd">
+    
+  </form>
+</div>
+
+<script>
+var app = angular.module('myApp', []);
+app.controller('formCtrl', function($scope) {
+    $scope.firstname = "Jeanne";
+    $scope.name = "Dupont";
+    $scope.pseudo = "Jdup";
+    $scope.name = "Dupont";
+    $scope.email = "Dupont@gmail.com";
+    $scope.pwd = "test";
+});
+</script>
+
+</body>
+</html>
