--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -24,7 +24,7 @@
             <input type="text1" id="inputAddress" class="form-control" placeholder="Address" formControlName="address">
             <br>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="authForm.invalid"> Sign In </button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="authForm.invalid"> Sign Up </button>
         </form>
         <br>
         <p class="text-danger">{{ errorMessage }}</p>
