--- a/src/app/user/publi/publi.component.html
+++ b/src/app/user/publi/publi.component.html
@@ -11,13 +11,33 @@
     <title>Hello, world!</title>
   </head>
   <body>
+
+
+
+
+
+
+
+
+<form>
+     <div class="form-group">
+  
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+  <button type="button" class="btn btn-danger">Commenter</button>
+  </form>
+
+  <br>
+
+
+
     <div class="card mb-3">
         
         <div class="card-body">
           <h5 class="card-title">Jeanne</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>        
-          <button type="button" class="btn btn-primary btn-sm">J'aime</button>             
-          <button type="button" class="btn btn-secondary btn-sm">J'aime pas</button>
+           <button type="button" class="btn btn-danger">J'aime</button>             
+          <button type="button" class="btn btn-secondary">J'aime pas</button>
         <p class="card-text"><small class="text-muted">Il y a 3 minutes</small></p>
         </div>
       </div>
@@ -26,8 +46,8 @@
       <div class="card-body">
         <h5 class="card-title">Lucas</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>        
-        <button type="button" class="btn btn-primary btn-sm">J'aime</button>             
-      <button type="button" class="btn btn-secondary btn-sm">J'aime pas</button>
+     <button type="button" class="btn btn-danger">J'aime</button>             
+          <button type="button" class="btn btn-secondary">J'aime pas</button>
       <p class="card-text"><small class="text-muted">Il y a 5 minutes</small></p>
       </div>
     </div>
@@ -36,8 +56,8 @@
         <div class="card-body">
           <h5 class="card-title">Marie Jeanne</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>        
-          <button type="button" class="btn btn-primary btn-sm">J'aime</button>             
-          <button type="button" class="btn btn-secondary btn-sm">J'aime pas</button>
+         <button type="button" class="btn btn-danger">J'aime</button>             
+          <button type="button" class="btn btn-secondary">J'aime pas</button>
         <p class="card-text"><small class="text-muted">Il y a 2 heures</small></p>
         </div>
       </div>
