--- a/src/app/user/publi/publi.component.html
+++ b/src/app/user/publi/publi.component.html
@@ -22,7 +22,7 @@
 <form>
      <div class="form-group">
   
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
   </div>
   <button type="button" class="btn btn-danger">Commenter</button>
   </form>
@@ -31,7 +31,7 @@
 
 
 
-    <div class="card mb-3">
+    <div class="card w-50">
         
         <div class="card-body">
           <h5 class="card-title">Jeanne</h5>
@@ -41,8 +41,9 @@
         <p class="card-text"><small class="text-muted">Il y a 3 minutes</small></p>
         </div>
       </div>
+       <br>
 
-      <div class="card mb-3">
+      <div class="card w-75">
       <div class="card-body">
         <h5 class="card-title">Lucas</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>        
@@ -51,8 +52,8 @@
       <p class="card-text"><small class="text-muted">Il y a 5 minutes</small></p>
       </div>
     </div>
-
-    <div class="card mb-3">
+     <br>
+    <div class="card w-50">
         <div class="card-body">
           <h5 class="card-title">Marie Jeanne</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>        
