--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="isAuth">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown" routerLinkActive="active">
-          <a class="nav-link dropdown-toggle" routerLink="/home" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" routerLink="/publi" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Uttilisateur
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="/info">Informarion</a>
+            <a class="dropdown-item" routerLink="/user">Informarion</a>
             <a class="dropdown-item" routerLink="/publi">Publication</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" routerLink="/stat">Statistique</a>
