change bug HTML

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
             </ul>  
         </div>
         <div class="col">
-            <h4 style="text-align: center;"> My friends </h4>
+            <h4 style="text-align: center;"> Publication </h4>
             <br>
             <ul class="list-group">
                 <li class="list-group-item" *ngFor="let publi of allPubli" > 
