--- a/src/app/user/infos/infos.component.html
+++ b/src/app/user/infos/infos.component.html
@@ -4,25 +4,25 @@
             <div class="p-3 border bg-light">
                 <h4 style="text-align: center;"> Change Information </h4>
                 <hr>
-                <form>
+                <form class="form-user" [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
                     <div>
-                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address">
+                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" formControlName="mail">
                         <br>
                     </div>
                     <div>
-                        <input type="password" id="inputPassword" class="form-control" placeholder="Password">
+                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" formControlName="password1">
                         <br>
                     </div>
                     <div>
-                        <input type="password" id="inputPassword1" class="form-control" placeholder="Confirm Password">
+                        <input type="password" id="inputPassword1" class="form-control" placeholder="Confirm Password" formControlName="password2">
                         <br>
                     </div>
                     <div>
-                        <input type="text" id="inputPhone" class="form-control" placeholder="Phone">
+                        <input type="text" id="inputPhone" class="form-control" placeholder="Phone" formControlName="phone">
                         <br>
                     </div>
                     <div>
-                        <input type="text" id="inputAddress" class="form-control" placeholder="Address">
+                        <input type="text" id="inputAddress" class="form-control" placeholder="Address" formControlName="address">
                         <br>
                     </div>
                     <button class="btn btn-lg btn-primary btn-block" type="submit" > Change </button>
