--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,9 @@
             <a class="dropdown-item" routerLink="/user">Informarion</a>
             <a class="dropdown-item" routerLink="/publi">Publication</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" routerLink="/stat">Statistique</a>
+            <a class="dropdown-item" routerLink="/stat1">Statistique Activite</a>
+            <a class="dropdown-item" routerLink="/stat2">Statistique Zone </a>
+            <a class="dropdown-item" routerLink="/stat3">Statistique Pays </a>
           </div>
         </li>
         <li class="nav-item active" routerLinkActive="active">
