--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="isAuth">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown" routerLinkActive="active">
-          <a class="nav-link dropdown-toggle" routerLink="/home" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Uttilisateur
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
